src/test/deca/context/invalid/created/appel_meth/appel_method_float.deca
// Description :
//   	appel d'une methode sur un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10 : (3.71) Le membre gauche n'est pas de type 'class'

{
float a;
a.b();
}